--- a/main.html
+++ b/main.html
@@ -72,7 +72,7 @@
     <div class="div2">
         <div class="row">
             <div class="col-sm-6">
-                <!--유튜브-->
+                <!--유튜브영상-->
                 <iframe width="100%" height="750" src="https://www.youtube.com/embed/5WsOJYkG6cA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
             <div class="col-sm-6">
