--- a/main.html
+++ b/main.html
@@ -38,7 +38,9 @@
             <a class="nav-link" href="#">Tree</a>
           </li>
       </ul>
-      <button id="login" type="button" class="btn btn-outline-success">로그인</button>
+      <button id="login" type="button" class="btn btn-outline-success" onclick="location.href='login.html'" style="float: right">로그인</button>
+      <button id="join" type="button" class="btn btn-outline-success" onclick="location.href='join.html'" style="float: right">회원가입</button>
+
     </div>
   </div>
 </nav>
@@ -49,13 +51,13 @@
         <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="plogging1.jpg" class="d-block w-100" alt="...">
+                <img src="picture1.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="plogging1.jpg" class="d-block w-100" alt="...">
+                <img src="picture1.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="plogging1.jpg" class="d-block w-100" alt="...">
+                <img src="plcture1.jpg" class="d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
