--- a/list.html
+++ b/list.html
@@ -34,7 +34,7 @@
             <li><button type="button" style="margin-left:600px;" id="loginbt" class="btn btn-outline-primary" onClick="location.href='login.html'">LOGIN</button></li>
         </ul>
         
-    </div><!--nav 막음-->
+    </div>
     
     <div class="board_wrap"><!--전체를 묶어주는 class-->
         <div class="board_title">
