--- a/selfcheck.html
+++ b/selfcheck.html
@@ -35,7 +35,8 @@
             <li><button type="button" style="margin-left:600px;" id="loginbt" class="btn btn-outline-primary" onClick="location.href='login.html'">LOGIN</button></li>
         </ul>
         
-    </div><!--nav 막음-->
+    </div>
+    
 
     <div class="container-fluid text-center selfcheck">
         <div class="container-fluid text-center intro">
