--- a/write.html
+++ b/write.html
@@ -34,7 +34,7 @@
             <li><button type="button" style="margin-left:600px;" id="loginbt" class="btn btn-outline-primary" onClick="location.href='login.html'">LOGIN</button></li>
         </ul>
         
-    </div><!--nav 막음-->
+    </div>
 
     <div class="board_wrap">
         <div class="board_title">
