--- a/aboutus.html
+++ b/aboutus.html
@@ -7,6 +7,8 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  </head>
     <link rel="stylesheet" href="aboutus.css">
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
@@ -70,7 +72,7 @@
   <!--div navbar-->
   <div id="nav">
     <ul class="nav-container">
-        <li class="nav-home"><img src="image/logo2.png" onClick="location.href='main.html'" width="250" height="50"></li>
+        <li class="nav-home"><img src="image/logo2.png" onClick="location.href='main.html'" width="250" height="60"></li>
         <li class="nav-item" id="act2">ACTIVITY<ul class="nav-container-in">
         <li class="nav-item-in">SELF CHECK</li>
         <li class="nav-item-in">PLOGGING COURSE</li>
@@ -219,18 +221,19 @@
 </div>
 
   <!--div footer-->
-  <div class="container-fluid footer" id="bottom">
-    <div class="footer">
-      <a href="https://www.chungbuk.ac.kr/site/www/main.do"><img src="image/cbnu.png" height="50px"></a> 
-      <a href="https://software.cbnu.ac.kr/"><img src="image/cbnusw.png" height="50px"></a> 
-      <a href="https://github.com/dotoooo22"><img src="image/dotom.png" height="50px"></a> 
-      <a href="https://github.com/sohenney"><img src="image/henny.png" height="50px"></a> 
-      <a href="https://github.com/leesj6368"><img src="image/ju.png" height="50px"></a> 
-      <br>
-      <p>이것은 푸터입니다. 위에는 학교홈페이지와 저희 깃허브입니다.(블로그일수도)</p>
-      <p>찾아오시는길: 찾아오지말아주세요.</p>
-      <p>2023 3-1학기 오픈소스웹프로젝트</p>
-    </div>
+  <div class="footer">
+    <a href="https://www.chungbuk.ac.kr/site/www/main.do"><img src="image/cbnu.png" height="50px"></a> 
+    <a href="https://software.cbnu.ac.kr/"><img src="image/cbnusw.png" height="50px"></a> 
+    <a href="https://github.com/dotoooo22"><img src="image/dotom.png" height="50px"></a> 
+    <a href="https://github.com/sohenney"><img src="image/henny.png" height="50px"></a> 
+    <a href="https://github.com/leesj6368"><img src="image/ju.png" height="50px"></a> 
+    
+    <p>2023년 3-1 오픈소스 웹소프트웨어<br>
+    (28644)충청북도 청주시 서원구 충대로 1<br>
+    (이용 문의)TrashGo@.chungbuk.ac.kr<br>
+    E-mail :TrashGo@.chungbuk.ac.kr<br>
+    <p>Copyright © TrashGo. All Rights Reserved.</p>
+    
   </div>
 
 
