about us 페이지 이미지 수정 및 이미지 파일 분리

--- a/aboutus.html
+++ b/aboutus.html
@@ -99,7 +99,7 @@
     <h2 class="bigtxt ploggingtitle animate-on-scroll">What's Plogging?</h2>
     <p class="subtxt0 animate-on-scroll">플로깅이란 무엇일까요?</p>
     <div class="col-sm-5">
-      <img src="image/plogging.jpg" class="ploggingdiv" width="98%" height="98%">
+      <img src="image/aboutus/plogging1.png" class="ploggingdiv" width="98%" height="98%">
     </div>
     <div class="container-fluid col-sm-7 ploggingin">
       <h3 class="ploggingtxt animate-on-scroll">플로깅: 조깅이나 달리기 + 쓰레기 줍기 형태의<br>새로운 피트니스 트렌드</h3>
@@ -119,10 +119,10 @@
         <b class="adv-desctitle animate-on-scroll">건강 증진</b>
         <div class="flip-card-inner">
           <div class="flip-card-front">
-            <img src="image/adv1front.jpg" class="adv">
+            <img src="image/aboutus/adv1front.png" class="adv">
           </div>
           <div class="flip-card-back">
-            <img src="image/adv1.jpg" class="adv">
+            <img src="image/aboutus/adv1.png" class="adv">
             <p class="animate-on-scroll"><br>플로깅은 운동과 쓰레기 수거를 결합하여 몸을 움직이는 데 매우 효과적입니다. 쓰레기를 줍는 동작은 스쿼트와 유사하여 운동량을 늘리고 칼로리 소모량을 높일 수 있습니다. 따라서 플로깅은 운동량을 늘림으로써 더 나은 심혈관 건강, 근육 강화, 체중 감량 및 체력 향상에 도움이 됩니다.</p>
           </div>
         </div>
@@ -131,10 +131,10 @@
         <b class="adv-desctitle animate-on-scroll">환경 보호</b>
         <div class="flip-card-inner">
           <div class="flip-card-front">
-            <img src="image/adv2front.jpg" class="adv">
+            <img src="image/aboutus/adv2front.png" class="adv">
           </div>
           <div class="flip-card-back">
-            <img src="image/adv2.jpg" class="adv">
+            <img src="image/aboutus/adv2.png" class="adv">
             <p class="animate-on-scroll"><br>플로깅은 환경을 보호하기 위해 쓰레기를 수거하고 지역을 깨끗하게 유지합니다. 쓰레기를 지우는 것은 공원, 해변, 도시 거리 등에서 산책하기 더욱 쾌적한 환경을 만들고 일회용품 사용을 줄이는 등 지속 가능한 생활 방식을 촉진합니다. 플로깅을 하면서 플라스틱 병이나 쓰레기를 줍는 것만으로도 생태계를 보호하고, 쓰레기 매립지의 양을 줄이며, 도로 위의 쓰레기로 인한 사고를 예방하는 데 기여할 수 있습니다. 또한 이는 지구를 보호하고 미래 세대를 위한 지속 가능한 지구를 만드는 데 큰 도움이 될 것입니다.</p>
           </div>
         </div>
@@ -143,10 +143,10 @@
         <b class="adv-desctitle animate-on-scroll">지역 사회의 경제적 이득</b>
         <div class="flip-card-inner">
           <div class="flip-card-front">
-            <img src="image/adv3front.jpg" class="adv">
+            <img src="image/aboutus/adv3front.png" class="adv">
           </div>
           <div class="flip-card-back">
-            <img src="image/adv3.jpg" class="adv">
+            <img src="image/aboutus/adv3.png" class="adv">
             <p class="animate-on-scroll"><br>쓰레기를 수거하고 처리하는 것은 지역에서 추가적인 비용이 들어갈 수 있으므로, 플로깅은 지역 경제에 경제적 이익을 증가시킬 수 있습니다. 따라서 플로깅을 함으로써 쓰레기 처리 비용을 줄이고, 나아가 지역의 관광 산업을 활성화할 수 있습니다.</p>
           </div>
         </div>
@@ -155,10 +155,10 @@
         <b class="adv-desctitle animate-on-scroll">사회적 상호작용 촉진</b>
         <div class="flip-card-inner">
           <div class="flip-card-front">
-            <img src="image/adv4front.jpg" class="adv">
+            <img src="image/aboutus/adv4front.png" class="adv">
           </div>
           <div class="flip-card-back">
-            <img src="image/adv4.jpg" class="adv">
+            <img src="image/aboutus/adv4.png" class="adv">
             <p class="animate-on-scroll"><br>플로깅은 동료들과 함께 수행할 수 있으므로 사회적 상호 작용을 촉진합니다. 또한 더 나은 지역 사회를 위해 함께 동참하는 커뮤니티를 생성하기도 합니다. 그룹 활동으로 함께 운동하면서 환경을 보호하는 플로깅에 참여함으로써 사회적 연결감을 느낄 수 있습니다.</p>
           </div>
         </div>
@@ -177,7 +177,7 @@
   <div class="container-fluid ploggingchange">
     <h2 class="bigtxt ploggingtxt2 animate-on-scroll">Click image to see Plogging Cycle</h2>
     <p class="subtxt0 animate-on-scroll">플로깅 사이클을 알아볼까요?<br>플로깅 사이클을 체험해보려면 이미지를 여러번 클릭해보세요.</p>
-    <img src="image/beforeplogging.jpg" id="changeimg" onclick="Change()">
+    <img src="image/aboutus/beforeplogging.jpg" id="changeimg" onclick="Change()">
     <h4 class="ploggingtxt3 animate-on-scroll">플로깅, Trash Go와 함께 해봐요! <span class="glyphicon glyphicon-globe icon"></span> </h4>
   </div>
   
@@ -185,25 +185,25 @@
 
   <!--div member-->
 	<div class="container-fluid text-center member">
-    <img src="image/people.png" class="icon1">
+    <img src="image/aboutus/people.png" class="icon1">
 		<h2 style="display:inline-block" class="bigtxt animate-on-scroll">Trash Go</h2>
 	
     <p class="introducetxt animate-on-scroll"><b>Trash Go</b> : For <b>Plogging</b> culture wide-spread & Protect Env.</p>
 	  <div class="row">
 			<div class="col-sm-4">
-				<img src="image/minjeong.jpg" class = "img-circle shadow-drop-center" width="250" height="250" data-toggle="collapse" data-target="#member1">
+				<img src="image/aboutus/minjeong.jpg" class = "img-circle shadow-drop-center" width="250" height="250" data-toggle="collapse" data-target="#member1">
         <p class="memname animate-on-scroll"><b>Minjeong Gwak</b></p>
 				<div id="member1" class="collapse membertxt">Minjeong is responsible for making intro page and main page.<br><br>
         <a href="https://github.com/dotoooo22" class="githublink">Click To Visit Minjeong's GitHub</a></div>
 			</div>
 			<div class="col-sm-4">
-				<img src="image/seonjue.jpg" class = "img-circle shadow-drop-center" width="250" height="250" data-toggle="collapse" data-target="#member2">
+				<img src="image/aboutus/seonjue.jpg" class = "img-circle shadow-drop-center" width="250" height="250" data-toggle="collapse" data-target="#member2">
         <p class="memname animate-on-scroll"><b>Seonjue Lee</b></p>
 				<div id="member2" class="collapse membertxt">Seonjue is responsible for making community page and self check page.<br><br>
           <a href="https://github.com/leesj6368" class="githublink">Click To Visit Seonjue's GitHub</a></div>
 			</div>
 			<div class="col-sm-4">
-				<img src="image/sohyeon.jpg" class = "img-circle shadow-drop-center" width="250" height="250" data-toggle="collapse" data-target="#member3">
+				<img src="image/aboutus/sohyeon.jpg" class = "img-circle shadow-drop-center" width="250" height="250" data-toggle="collapse" data-target="#member3">
         <p class="memname animate-on-scroll"><b>Sohyeon Lee</b></p>
 				<div id="member3" class="collapse membertxt">Sohyeon is responsible for making about us page and plogging course page.<br><br>
           <a href="https://github.com/sohenney" class="githublink">Click To Visit Sohyeon's GitHub</a></div>
@@ -215,7 +215,7 @@
 
   <!--div link-->
   <div class="container-fluid text-center link">
-    <img src="image/link.png" class="icon2"><h2 class="bigtxt animate-on-scroll" id="rel_site">Related sites</h2>
+    <img src="image/aboutus/link.png" class="icon2"><h2 class="bigtxt animate-on-scroll" id="rel_site">Related sites</h2>
     <p class="subtxt2 animate-on-scroll" style="color: gray;">환경과 관련된 사이트 링크입니다.<br>아래의 링크들을 통해 더욱 자세한 환경 실태를 알 수 있습니다!</p>
     <a href="http://www.worldbank.org/html/gef/gefgraph.htm" class="sitelink">국제환경기구</a>
     <a href="www.wcmc.org.uk" class="sitelink animate-on-scroll">세계환경보전모니터링 센터</a>
@@ -258,7 +258,7 @@
     });
 
     // image onclick js
-    var images = ["image/beforeplogging.jpg", "image/midplogging.jpg", "image/recycle.jpg", "image/afterplogging.jpg"];
+    var images = ["image/aboutus/beforeplogging.jpg", "image/aboutus/midplogging.jpg", "image/aboutus/recycle.jpg", "image/aboutus/afterplogging.jpg"];
     var currentIndex = 0;
           
     function Change() {
