plogging course, about us, board, annoucement, tree test 페이지 (5개) footer 수정했습니다.

--- a/list_announce.html
+++ b/list_announce.html
@@ -157,7 +157,7 @@
         <a href="https://github.com/sohenney"><img src="image/henny.png" height="50px"></a> 
         <a href="https://github.com/leesj6368"><img src="image/ju.png" height="50px"></a> 
         
-        <p>2023년 3-1 오픈소스 웹소프트웨어<br>
+        <p class="footerdes">2023년 3-1 오픈소스 웹소프트웨어<br>
             (28644)충청북도 청주시 서원구 충대로 1<br>
             (이용 문의) PLOPLO@chungbuk.ac.kr<br>
             E-mail : PLOPLO@chungbuk.ac.kr<br>
