--- a/ploggingcourse.html
+++ b/ploggingcourse.html
@@ -240,11 +240,11 @@
         <a href="https://github.com/sohenney"><img src="image/henny.png" height="50px"></a> 
         <a href="https://github.com/leesj6368"><img src="image/ju.png" height="50px"></a> 
         
-        <p>2023년 3-1 오픈소스 웹소프트웨어<br>
-        (28644)충청북도 청주시 서원구 충대로 1<br>
-        (이용 문의)TrashGo@.chungbuk.ac.kr<br>
-        E-mail :TrashGo@.chungbuk.ac.kr<br>
-        <p>Copyright © TrashGo. All Rights Reserved.</p>
+        <p class="footerdes">2023년 3-1 오픈소스 웹소프트웨어<br>
+            (28644)충청북도 청주시 서원구 충대로 1<br>
+            (이용 문의) PLOPLO@chungbuk.ac.kr<br>
+            E-mail : PLOPLO@chungbuk.ac.kr<br>
+            <p>Copyright © PLOPLO. All Rights Reserved.</p>
         
       </div>
 
