--- a/write.html
+++ b/write.html
@@ -69,10 +69,13 @@
         <a href="https://github.com/dotoooo22"><img src="image/dotom.png" height="50px"></a> 
         <a href="https://github.com/sohenney"><img src="image/henny.png" height="50px"></a> 
         <a href="https://github.com/leesj6368"><img src="image/ju.png" height="50px"></a> 
-        <br>
-        <p>이것은 푸터입니다. 위에는 학교홈페이지와 저희 깃허브입니다.(블로그일수도)</p>
-        <p>찾아오시는길: 찾아오지말아주세요.</p>
-        <p>2023 3-1학기 오픈소스웹프로젝트</p>
+        
+        <p class="footerdes">2023년 3-1 오픈소스 웹소프트웨어<br>
+            (28644)충청북도 청주시 서원구 충대로 1<br>
+            (이용 문의) PLOPLO@chungbuk.ac.kr<br>
+            E-mail : PLOPLO@chungbuk.ac.kr<br>
+            <p>Copyright © PLOPLO. All Rights Reserved.</p>
+        
       </div>
     <script>
         function movelist() {
