인트로에서넘어가기,회원가입,메인,푸터수정완

--- a/login.html
+++ b/login.html
@@ -45,7 +45,7 @@
         <div class="others">
             <a href="#" class="link-secondary">Do you forgot your account?</a>
             <br>
-            <a href="#" class="link-success">Create a new acoount</a>
+            <a href="join.html" class="link-success">Create a new acoount</a>
         </div>
         
     </form>
