intro 수정, main 수정

--- a/intro.html
+++ b/intro.html
@@ -58,10 +58,9 @@
             
             <div id="title">
                 <div class="container-fluid text-center title">
-                    <h1 class="titletxt1">안녕하세요!</h1>
-                    <h2 class="titletxt2">PLOPLO는 지구를 사랑하는 사람들이 모이는 웹사이트입니다.</h2>
-                    <h2 class="titletxt2">작은 용기를 내어 낸 한걸음이 위대한 여정의 시작입니다.</h2>
-                    <button onclick="moveLogin()" class="titletxt2">PLOPLO 로그인하기</button>
+                    <h1 class="titletxt1">Welcome To PLOPLO !</h1>
+                    <h2 class="titletxt2">PLOPLO는 지구를 사랑하는 사람들이 모이는 웹사이트입니다.<br>작은 용기를 내어 낸 한걸음이 위대한 여정의 시작입니다.</h2>
+                    <button onclick="moveLogin()" class="btntxt">PLOPLO 로그인하기</button>
                 </div>
             </div>
         </div>
