--- a/ploggingcourse.html
+++ b/ploggingcourse.html
@@ -8,7 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <link rel="stylesheet" href="ploggingcourse.css">
-    <title>Plogging Course</title>
+    <title>PLOPLO</title>
 </head>
 <body>
 
