--- a/selfcheck.html
+++ b/selfcheck.html
@@ -13,7 +13,7 @@
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript"></script>
     <link rel="stylesheet" href="selfcheck.css">
-    <title>Self Check</title>
+    <title>PLOPLO</title>
 </head>
 <body>
     <!--div nav-->
