카드마지막사진바꿈.

--- a/main.html
+++ b/main.html
@@ -216,11 +216,11 @@
           <div class="col-sm-3 layer">
             <!--카드-->
             <div class="card" style="width: 15rem;">
-              <img src="image/henny.png" class="card-img-top" alt="...">
+              <img src="image/ham.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Ju</h5>
-                <p class="card-text">The TrashGo Web developer.</p>
-                <a href="#" class="btn btn-primary">Go github</a>
+                <h5 class="card-title">hemging</h5>
+                <p class="card-text">The TrashGo Web cheerleader.</p>
+                <a href="#" class="btn btn-primary">Go Page</a>
               </div>
             </div>
         </div>
