메인 게시판 내용 수정

--- a/main.html
+++ b/main.html
@@ -42,7 +42,7 @@
   <div id="main-content">
             <br>
       <div class="title">
-        <h1 class="titlebig">Welcome To PloPlo !</h1>
+        <h1 class="titlebig">Welcome To PLOPLO !</h1>
       </div>
       <div class="div1">
         <div class="slider">
@@ -112,34 +112,34 @@
                     </thead>
                     <tbody>
                       <tr>
-                        <th scope="row" class="num"></th>
-                        <td class="list-title">Mark</td>
-                        <td class="writer">Otto</td>
-                        <td class="date">@mdo</td>
+                        <th>1</th>
+                        <td>플로킹 코스 수정 내용 안내</td>
+                        <td>관리자</td>
+                        <td class="date">2023.6.13</td>
                       </tr>
                       <tr>
-                        <th scope="row" class="num"></th>
-                        <td class="list-title">Jacob</td>
-                        <td class="writer">Thornton</td>
-                        <td class="date">@fat</td>
+                        <th>2</th>
+                        <td>6월 11일 정기점검 완료 안내</td>
+                        <td>관리자</td>
+                        <td class="date">2023.6.11</td>
                       </tr>
                       <tr>
-                        <th scope="row" class="num"></th>
-                        <td class="list-title">Jacob</td>
-                        <td class="writer">Thornton</td>
-                        <td class="date">@fat</td>
+                        <th>3</th>
+                        <td>6월 7일 알려진 문제점 안내</td>
+                        <td>관리자</td>
+                        <td class="date">2023.6.07</td>
                       </tr>
                       <tr>
-                        <th scope="row" class="num"></th>
-                        <td class="list-title">Jacob</td>
-                        <td class="writer">Thornton</td>
-                        <td class="date">@fat</td>
+                        <th>4</th>
+                        <td>PLOPLO 업데이트 소식</td>
+                        <td>관리자</td>
+                        <td class="date">2023.6.06</td>
                       </tr>
                       <tr>
-                        <th scope="row" class="num"></th>
-                        <td class="list-title">Jacob</td>
-                        <td class="writer">Thornton</td>
-                        <td class="date">@fat</td>
+                        <th>5</th>
+                        <td>2023년 PLOPLO 서비스 개선 계획 안내</td>
+                        <td>관리자</td>
+                        <td class="date">2023.6.03</td>
                       </tr>
                     </tbody>
                   </table>
