공지사항 제목수정

--- a/list_announce.html
+++ b/list_announce.html
@@ -80,7 +80,7 @@
 
                 <div class="line">
                     <div class="num">7</div>
-                    <div class="title"><a href="view_announce.html">Trash Go 비정기 업데이트 소식</a></div>
+                    <div class="title"><a href="view_announce.html">PLOPLO 정기 업데이트 소식</a></div>
                     <div class="writer">관리자</div>
                     <div class="date">2023.6.06</div>
                     <div class="count">50</div>
@@ -88,7 +88,7 @@
 
                 <div class="line">
                     <div class="num">6</div>
-                    <div class="title"><a href="view_announce.html">2023년 Trash Go 서비스 개선 계획 안내</a></div>
+                    <div class="title"><a href="view_announce.html">2023년 PLOPLO 서비스 개선 계획 안내</a></div>
                     <div class="writer">관리자</div>
                     <div class="date">2023.6.03</div>
                     <div class="count">100</div>
@@ -129,7 +129,7 @@
 
                 <div class="line">
                     <div class="num">1</div>
-                    <div class="title"><a href="view_announce.html">Trash Go 이용 안내</a></div>
+                    <div class="title"><a href="view_announce.html">PLOPLO 이용 안내</a></div>
                     <div class="writer">관리자</div>
                     <div class="date">2023.5.09</div>
                     <div class="count">10</div>
