오늘의 플로거부분 Trash go->PLOPLO

--- a/main.html
+++ b/main.html
@@ -186,7 +186,7 @@
                   <img src="image/henny.png" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Henny</h5>
-                    <p class="card-text">The TrashGo Web developer.</p>
+                    <p class="card-text">The PLOPLO Web developer.</p>
                     <a href="#" class="btn btn-primary">Go github</a>
                   </div>
                 </div>
@@ -197,7 +197,7 @@
                   <img src="image/dotom.png" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Dotom</h5>
-                    <p class="card-text">The TrashGo Web developer.</p>
+                    <p class="card-text">The PLOPLO Web developer.</p>
                     <a href="#" class="btn btn-primary">Go github</a>
                   </div>
                 </div>
@@ -208,7 +208,7 @@
                 <img src="image/ju.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Ju</h5>
-                  <p class="card-text">The TrashGo Web developer.</p>
+                  <p class="card-text">The PLOPLO Web developer.</p>
                   <a href="#" class="btn btn-primary">Go github</a>
                 </div>
               </div>
@@ -219,7 +219,7 @@
               <img src="image/ham.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">hemging</h5>
-                <p class="card-text">The TrashGo Web cheerleader.</p>
+                <p class="card-text">The PLOPLO Web cheerleader.</p>
                 <a href="#" class="btn btn-primary">Go Page</a>
               </div>
             </div>
