메인새로운 푸터 위 스크롤애니메이션

--- a/main.html
+++ b/main.html
@@ -226,8 +226,13 @@
         </div>
         </div>
     </div>
-  
+    <div class="animation2">
+      <h2 id="finish">Ploggin With PLOPLO</h2>
+      <img src="image/run2.png" id="scroll-run" width="150" height="150" style="position:relative; margin-top: 15%;">
+      <img src="image/scrolltrash.png" id="scroll-ani" width="50" height="50" style="position:relative; margin-top: 22%; left:37%;">
+    </div>
       
+
   </div>
   <div class="footer">
     <a href="https://www.chungbuk.ac.kr/site/www/main.do"><img src="image/cbnu.png" height="50px"></a> 
