파비콘 수정

--- a/treetest.html
+++ b/treetest.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="treetest.css">
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript"></script>
+    <link rel="icon" href="image/logo2.png">
     <title>PLOPLO</title>
 </head>
 
