--- a/aboutus.html
+++ b/aboutus.html
@@ -11,6 +11,7 @@
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
   <script type="text/javascript"></script>
   <link rel="stylesheet" href="aboutus.css">
+  <link rel="icon" href="image/logo2.png">
   </head>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
