--- a/ploggingcourse.html
+++ b/ploggingcourse.html
@@ -8,6 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <link rel="stylesheet" href="ploggingcourse.css">
+    <link rel="icon" href="image/logo2.png">
     <title>PLOPLO</title>
 </head>
 <body>
