about us 페이지 팀원 역할 변경

--- a/aboutus.html
+++ b/aboutus.html
@@ -194,19 +194,19 @@
 			<div class="col-sm-4">
 				<img src="image/aboutus/minjeong.jpg" class = "img-circle shadow-drop-center" width="250" height="250" data-toggle="collapse" data-target="#member1">
         <p class="memname animate-on-scroll"><b>Minjeong Gwak</b></p>
-				<div id="member1" class="collapse membertxt">Minjeong is responsible for making intro page and main page.<br><br>
+				<div id="member1" class="collapse membertxt">Minjeong is responsible for making intro page & main page & login/join & tree test page.<br><br>
         <a href="https://github.com/dotoooo22" class="githublink">Click To Visit Minjeong's GitHub</a></div>
 			</div>
 			<div class="col-sm-4">
 				<img src="image/aboutus/seonjue.jpg" class = "img-circle shadow-drop-center" width="250" height="250" data-toggle="collapse" data-target="#member2">
         <p class="memname animate-on-scroll"><b>Seonjue Lee</b></p>
-				<div id="member2" class="collapse membertxt">Seonjue is responsible for making community page and self check page.<br><br>
+				<div id="member2" class="collapse membertxt">Seonjue is responsible for making community page & self check page & footer & tree test page.<br><br>
           <a href="https://github.com/leesj6368" class="githublink">Click To Visit Seonjue's GitHub</a></div>
 			</div>
 			<div class="col-sm-4">
 				<img src="image/aboutus/sohyeon.jpg" class = "img-circle shadow-drop-center" width="250" height="250" data-toggle="collapse" data-target="#member3">
         <p class="memname animate-on-scroll"><b>Sohyeon Lee</b></p>
-				<div id="member3" class="collapse membertxt">Sohyeon is responsible for making about us page and plogging course page.<br><br>
+				<div id="member3" class="collapse membertxt">Sohyeon is responsible for making about us page & plogging course page & tree test page.<br><br>
           <a href="https://github.com/sohenney" class="githublink">Click To Visit Sohyeon's GitHub</a></div>
 			</div>
 		</div>
