--- a/selfcheck.html
+++ b/selfcheck.html
@@ -28,7 +28,7 @@
               <li class="nav-item-in"><a href="ploggingcourse.html">PLOGGING COURSE</a></li>
             </ul></li>
   
-            <li class="nav-item" id="act1">COMUNITY<ul class="nav-container-in">
+            <li class="nav-item" id="act1">COMMUNITY<ul class="nav-container-in">
               <li class="nav-item-in"><a href="list_announce.html">공지사항</a></li>
               <li class="nav-item-in"><a href="list.html">자유게시판</a></li>
             </ul></li>
