about us 팀 이름 수정

--- a/aboutus.html
+++ b/aboutus.html
@@ -187,9 +187,9 @@
   <!--div member-->
 	<div class="container-fluid text-center member">
     <img src="image/aboutus/people.png" class="icon1">
-		<h2 style="display:inline-block" class="bigtxt animate-on-scroll">Trash Go</h2>
+		<h2 style="display:inline-block" class="bigtxt animate-on-scroll">PLOPLO</h2>
 	
-    <p class="introducetxt animate-on-scroll"><b>Trash Go</b> : For <b>Plogging</b> culture wide-spread & Protect Env.</p>
+    <p class="introducetxt animate-on-scroll"><b>PLOPLO</b> : For <b>Plogging</b> culture wide-spread & Protect Env.</p>
 	  <div class="row">
 			<div class="col-sm-4">
 				<img src="image/aboutus/minjeong.jpg" class = "img-circle shadow-drop-center" width="250" height="250" data-toggle="collapse" data-target="#member1">
